--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-░░░░░░░░
-░░░░▄▀▀▀▀▀█▀▄▄▄▄░░░░
-░░▄▀▒▓▒▓▓▒▓▒▒▓▒▓▀▄░░
-▄▀▒▒▓▒▓▒▒▓▒▓▒▓▓▒▒▓█░
-█▓▒▓▒▓▒▓▓▓░░░░░░▓▓█░
-█▓▓▓▓▓▒▓▒░░░░░░░░▓█░
-▓▓▓▓▓▒░░░░░░░░░░░░█░
-▓▓▓▓░░░░▄▄▄▄░░░▄█▄▀░
-░▀▄▓░░▒▀▓▓▒▒░░█▓▒▒░░
-▀▄░░░░░░░░░░░░▀▄▒▒█░
-░▀░▀░░░░░▒▒▀▄▄▒▀▒▒█░
-░░▀░░░░░░▒▄▄▒▄▄▄▒▒█░
- ░░░▀▄▄▒▒░░░░▀▀▒▒▄▀░░
-░░░░░▀█▄▒▒░░░░▒▄▀░░░
-░░░░░░░░▀▀█▄▄▄▄▀
+What are you trying at son? Cos what ever you want you ain't gonna get it.
