--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <canvas id = "ctx" width = "700" height="500" style="border:4px solid #000000;"></canvas>
 <script>
+var canv = document.getElementById("ctx");
+var ctx = canv.getContext("2d");
+ctx.anc(100,100,20,0,360)
+</script>
+
