--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ void draw() {
     cursor();
     textSize(50);
     fill(80,80,80);
-    text("Game Over", width/2-200, height/2-75);
+    text("Game Over!", width/2-200, height/2-75);
     text("Size = " + (mass_player-20), width/2-170, height/2)
-    text("Game made by Pablo",width/2-300,height/2+75)
+    text("Play Again",width/2-300,height/2+75)
   }
 }else{
   text("Game Paused", width/2-200, height/2-75);
