--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ var x = 350;
 ctx.fillRect(x,250,50,50);
 x = 250;
 ctx.fillRect(x,200,50,50);
-
+<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
 </script>
