--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 350;
 ctx.fillRect(x,250,50,50);
-x = 401;
+x = 250;
+setInterval(Change,20);
 ctx.fillRect(x,400,50,50);
-
+function change(){
+  x++;
+  ctx.fillRect(x,150,50,50);
+}
 </script>
