--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ var ctx = canv.getContext("2d");
 var x = 350;
 ctx.fillRect(x,250,50,50);
 x = 250;
-setInterval(Change,20);
+setInterval(change,20);
 ctx.fillRect(x,400,50,50);
 function change(){
   x++;
