--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
-var x = 350;
+var x = 250;
+var y = 100;
 ctx.fillRect(x,250,50,50);
 x = 250;
 setInterval(change,20);
 ctx.fillRect(x,400,50,50);
 function change(){
   x++;
-  ctx.fillRect(x,150,50,50);
+  y++;
+  ctx.fillRect(x,y,50,50);
 }
 </script>
