--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
 var x = 250;
-var y = 100;
+var y = 0;
 ctx.fillRect(x,100,50,50);
 x = 250;
 setInterval(change,20);
@@ -12,6 +12,6 @@ ctx.fillRect(x,400,50,50);
 function change(){
   x++;
   y++;
-  ctx.fillRect(x,y,50,50);
+  ctx.fillRect(x,100,50,y);
 }
 </script>
