--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ ctx.fillRect(x,400,50,50);
 function change(){
   x++;
   y++;
-  ctx.fillRect(x,100,50,y);
+  ctx.fillCirc(x,100,50,y);
 }
 </script>
