--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<canvas id = "ctx" width = "700" height="500" style="border:1px solid #000000;"></canvas>
+<canvas id = "ctx" width = "700" height="500" style="border:4px solid ##0C49CF;"></canvas>
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
@@ -12,6 +12,6 @@ ctx.fillRect(x,400,50,50);
 function change(){
   x++;
   y++;
-  ctx.fillCirc(x,100,50,y);
+  ctx.fillRect(x,100,50,y);
 }
 </script>
