--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<canvas id = "ctx" width = "700" height="500" style="border:4px solid ##0C49CF;"></canvas>
+<canvas id = "ctx" width = "700" height="500" style="border:4px solid #0C49CF;"></canvas>
 <script>
 var canv = document.getElementById("ctx");
 var ctx = canv.getContext("2d");
