--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@ function change(){
 }
 </script>
 <title>RandomWebsite</title>
+<link id="favicon" rel="icon" type="image/png" href="favicon-32x32.png"/>
