--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ function change(){
   ctx.fillRect(x,100,50,y);
 }
 </script>
-<title>RandomWebsite</title>
-<link id="favicon" rel="icon" type="image/png" href="favicon-32x32.png"/>
+<title>PoKeFaZe's Project Website</title>
+
