--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ ctx.fillRect(x,400,50,50);
 function change(){
   x++;
   y++;
-  ctx.fillRect(x,100,50,y);
+  ctx.fillRect(x,100,y,y);
 }
 </script>
 <title>PoKeFaZe's Project Website</title>
