--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ ctx.fillRect(x,400,50,50);
 function change(){
   x++;
   y++;
-  ctx.fillRect(x,100,y,y);
+  ctx.fillRect(x,100,50,y);
 }
 </script>
-<title>PoKeFaZe's Project Website</title>
+<title>PlatinumPeak's Website</title>
 
